public/css/popout.css
.pop {
	animation-name: pop;
	animation-duration: 0.3s;
	animation-fill-mode: forwards;
}

@keyframes pop {
	from {
		right: 0;
		animation-timing-function: ease-in;
	}

	50% {
		right: 60%;
		animation-timing-function: ease-out;
	}

	to {
		right: 0%;
	}
}

.modal {
	display: none;
	position: fixed;
	z-index: 1;
	left: 0;
	top: 0;
	width: 100%;
	height: 100%;
	background-color: rgba(56, 40, 72, 0.8);
}

.modal-content {
	background-color: #fefefe;
	margin: -100% auto;
	padding: 20px;
	border: 1px solid #888;
	width: 80%;
	text-align: center;
}

.modal-content a {
	color: green;
}

.modal-content a {
	margin: auto;
}

.close {
	color: #aaa;
	float: right;
	font-size: 28px;
	font-weight: bold;
}

.close:hover,
.close:focus {
	color: black;
	text-decoration: none;
	cursor: pointer;
}

.open-modal {
	display: block;
	animation-name: open-modal;
	animation-duration: 1s;
}

@keyframes open-modal {
	from {
		background-color: rgba(0, 0, 0, 0);
	}

	to {
		background-color: rgba(56, 40, 72, 0.8);
	}
}

.slide-down {
	animation-name: slide-down;
	animation-duration: 0.3s;
	animation-fill-mode: forwards;
}

@keyframes slide-down {
	from {
		margin-top: -100vh;
	}

	to {
		margin-top: 30vh;
	}
}

.entire-menu {
	position: fixed;
	right: 0;
	top: 0;
	height: 100vh;
}

#toggle-menu {
	height: 3em;
	width: 100%;
}

.toggle-icon-container:hover {
	cursor: grab
}

.toggle-icon-container {
	height: 3em;
	width: 3em;
	display: flex;
	right: 0.5em;
	top: 1em;
	position: absolute;
	border: none;
	padding: 0;
	background: none;
	transform: rotate(90deg);
	transition: transform 0.5s;
}

.bar {
	background-color: dimgrey;
	width: inherit;
	height: inherit;
	margin: 2px;
}

.menu {
	user-select: none;
	-webkit-user-select: none;
	width: 2em;
	height: 100vh;
	color: ivory;
	display: flex;
	flex-direction: column;
	font-size: large;
	font-weight: bold;
	white-space: nowrap;
	position: relative;
}

.menu-item {
	height: 0px;
	transition: height 0.4s;
}

#home-menu {
	background-color: mediumseagreen;
	color: honeydew;
}

#account-menu {
	background-color: palevioletred;
	color: honeydew;
}

#help-menu {
	background-color: orange;
	color: honeydew;
}

.menu-container {
	position: absolute;
    background-color: inherit;
    border-top-left-radius: 1em;
	right: -300px;
	width: 300px;
    transition: right 0.7s;
}

/* open menu */
.menu-container:hover{
	right: 0vw !important;
}

.menu-content {
	position: relative;
	width: 30vw;
	height: 100vh;
	overflow: hidden;
	transition: width 0.7s;
	padding: 2em 0;
	right: 0;
}

.menu-tag-content {
	background-color: inherit;
	position: absolute;
	right: 100%;
	writing-mode: vertical-rl;
	text-orientation: mixed;
	padding: 1em 0.5em;
	border-top-left-radius: 0.5em;
	border-bottom-left-radius: 0.5em;
	top: 1em;
	padding-right: 25px;
	margin-right: 10px;
}

@-moz-document url-prefix() {
	.menu-tag-content {
		margin-right: -20px;
	}
}

.menu-tag-container {
	position: relative;
	background-color: inherit;
	transition: right 0.4s ease-in;
	right: 0em;
}

.menu a, .menu .important-link {
	text-decoration: none;
	color: inherit;
	display: block;
	cursor: pointer;
	width: 50%;
}

.menu-content>div {
	margin-left: auto;
}

@media screen and (min-width: 600px) {
	.menu a:hover, .menu .important-link:hover {
		text-decoration: none;
		color: red;
		display: block;
	}
}

@media screen and (max-width: 600px) {
	.menu-container {
		right: -80vw;
		width: 80vw;
	}

	.menu-content {
		padding: 2em 0 0 2em;
	}
}

